--- a/c7_index.html
+++ b/c7_index.html
@@ -14,6 +14,15 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<nav_menu id:"nav_menu">
+		<ul>
+			<li><a href="c7_index.html" class="current">Home</a></li>
+			<li><a href="speakers.html">Speakers</a></li>
+			<li><a href="luncheons.html">Luncheons</a></li>
+			<li><a href="tickets.html">Tickets</a></li>
+			<li><a href="about_us.html">About Us</a></li>
+		</ul>
+	</nav_menu>
 	<main>
 		<section>
 			<h2>Our Mission</h2>
