--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
-	<nav_menu id:"nav_menu">
+	<nav_menu id="nav_menu">
 		<ul>
 			<li><a href="c7_index.html" class="current">Home</a></li>
 			<li><a href="speakers.html">Speakers</a></li>
