--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<li><a href="luncheons.html">Luncheons</a></li>
 			<li><a href="tickets.html">Tickets</a></li>
 			<li><a href="about_us.html">About Us</a>
-				<ul>
+				<ul class="submenu">
 					<li><a href=#>Our History</a></li>
 					<li><a href=#>Board of Directors</a></li>
 					<li><a href=#>Past Speakers</a></li>
